<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">


        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="331dp"
                android:layout_height="579dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="35dp"

                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="50dp"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="20dp">


                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="#FDD2EC"
                    android:text="@string/simulate"/>

                <ScrollView
                    android:layout_width="324dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:fontFamily="@font/f2"
                        android:text="@string/petersonstheory"


                        android:textSize="20dp">

                    </TextView>

                </ScrollView>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/f1"
                    android:gravity="center_horizontal"
                    android:text="@string/petersons_algorithm"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="331dp"
                android:layout_height="579dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="35dp"


                android:layout_gravity="center_horizontal"


                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="50dp">


                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_gravity="bottom"
                    android:background="#FDD2EC"
                    android:text="@string/simulate"/>

                <ScrollView
                    android:layout_width="324dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:fontFamily="@font/f2"
                        android:text="@string/bankerstheory"


                        android:textSize="20dp">

                    </TextView>

                </ScrollView>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/f1"
                    android:gravity="center_horizontal"
                    android:text="@string/bankers_algorithm"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="331dp"
                android:layout_height="579dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="35dp"


                android:layout_gravity="center_horizontal"


                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="50dp">


                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_gravity="bottom"
                    android:background="#FDD2EC"
                    android:text="@string/simulate" />

                <ScrollView
                    android:layout_width="324dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:fontFamily="@font/f2"
                        android:text="@string/producerconsumertheory"


                        android:textSize="20dp">

                    </TextView>

                </ScrollView>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/f1"
                    android:gravity="center_horizontal"
                    android:text="@string/producer_consumer"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="331dp"
                android:layout_height="579dp"


                android:layout_gravity="center_horizontal"


                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="50dp">


                <Button
                    android:id="@+id/button7"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_gravity="bottom"
                    android:background="#FDD2EC"
                    android:text="@string/simulate" />

                <ScrollView
                    android:layout_width="324dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:fontFamily="@font/f2"
                        android:text="@string/dinningphilosopher_monitors"


                        android:textSize="20dp">

                    </TextView>

                </ScrollView>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/f1"
                    android:gravity="center_horizontal"
                    android:text="@string/dinning_philosopher"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </HorizontalScrollView>


</LinearLayout>




