<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bankersalgorithmbackground"
    tools:context=".BankersAlgorithm1">

    <EditText
        android:id="@+id/editTextNumber1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/enter_number_of_processes"
        android:includeFontPadding="false"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="#757575"
        android:visibility="visible"
        app:circularflow_angles="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/enter_number_of_resources"
        android:includeFontPadding="false"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="#757575"
        android:textSize="18sp"
        android:visibility="visible"
        app:circularflow_angles="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber1"
        app:layout_constraintVertical_bias="0.268"
        tools:ignore="Deprecated" />

    <Button
        android:id="@+id/banext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.658" />

</androidx.constraintlayout.widget.ConstraintLayout>